grammar etc tidied up

--- a/css-grid.html
+++ b/css-grid.html
@@ -11,10 +11,11 @@
 	<h1 id="top">CSS Grid</h1>
 	<nav>
 		<ul>
-			<li><a href="index.html">Home</a></li>
 			<li><a href="css-grid.html">Grid</a></li>
 			<li><a href="css-flexbox.html">Flexbox</a></li>
+			<li><a href="#">Shapes: coming soon</a></li>
 		</ul>
+
   </nav>
   <h2>Contents</h2>
   <ul>
