--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
 	<h1>CSS Review and Summary</h1>
 	<p>An overview of layout options, starting with CSS Grid and CSS Flexbox</p>
+	<p>Very much a work in progress</p>
 	<ul>
 		<li><a href="css-grid.html">Grid</a></li>
 		<li><a href="css-flexbox.html">Flexbox</a></li>
+		<li><a href="#">Shapes: coming soon</a></li>
+		<li><a href="#">Multicolumn: coming soon</a></li>
 	</ul>
 
 
